--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -170,6 +170,33 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import glob\n",
+    "import os\n",
+    "import re\n",
+    "\n",
+    "input_path = \"/datasets/srp073813/\"\n",
+    "quant_path = \"./src/data/tmp/quant\"\n",
+    "transcripts = \"/datasets/srp073813/reference/kallisto_transcripts.idx\"\n",
+    "bootstrap = 100\n",
+    "test_size = 20\n",
+    "\n",
+    "all_files = sorted(glob.glob(input_path + \"/*.fastq.gz\"))\n",
+    "if test_size == None:\n",
+    "    test_size = len(all_files)\n",
+    "for i in range(0, test_size, 2):\n",
+    "    folder = quant_path + '/' + re.findall('srp073813/(.*)\\_', all_files[i])[0]\n",
+    "    command = \"/opt/kallisto_linux-v0.42.4/kallisto quant -i %s -o %s -b %d %s %s\" \\\n",
+    "                    % (transcripts, folder, bootstrap, all_files[i], all_files[i+1])\n",
+    "    os.system(\"mkdir -p %s\" %quant_path)\n",
+    "    os.system(command)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
